<resources>
    <string name="app_name">rAuditor</string>
    <string name="food">Food &amp; Drink experiences</string>
    <string name="facebook_app_id">pHMjJ3QLPUBBDbFDU6pB5U8f</string>
    <string name="imagepicker_multiselect_done">Done</string>
    <string name="imagepicker_multiselect_not_enough_singular">You have to select 1 more image</string>
    <string name="imagepicker_multiselect_not_enough_plural">You have to select %d more images</string>
    <string name="imagepicker_multiselect_enough_singular">You have selected 1 image</string>
    <string name="imagepicker_multiselect_enough_plural">You have selected %d images</string>
    <string name="imagepicker_multiselect_overselect">You cannot select more than %d images</string>
    <string name="imagepicker_gallery_intent_title">Select Multiple Images</string>
    <string name="imagepicker_no_image_text_view">There are no image in your device.</string>
    <string-array name="Animals">
        <item>Select Animal!!</item>
        <item>Lion</item>
        <item>Tiger</item>
        <item>Elephant</item>
        <item>Zebra</item>
        <item>Giraffe</item>
        <item>Deer</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="Activity_rd_yes">Yes</string>
    <string name="Activity_rd_no">No</string>
    <string name="Activity_rd_na">N/A</string>
    <string name="Activity_rd_par">Partial</string>
    <string name="Activity_remarks">Remarks: </string>
    <string name="Activity_1_head">Ladder Use(a)</string>
    <string name="Activity_1_child">(LU)</string>
    <string name="Activity_1_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_1_rd1">4. Is ladder being used?</string>
    <string name="Activity_1_field_1">4.(a).Ladder is of the right height (top 2 rungs must not be in use) and in good condition?</string>
    <string name="Activity_1_field_2">4.(b).Ladder has Safe Working Load (SWL) label e.g. SWL 150kg?</string>
    <string name="Activity_1_field_3">4.(c).Ladder is stable, on even ground and can be fully spread out (for A-ladder)?</string>
    <string name="Activity_1_field_4">4.(d).User has 3 points of contact with the ladder and has the front of his body facing the ladder?</string>
    <string name="Activity_1_submit">Next</string>
    <string name="Activity_2_head">Fly Killer Dispenser installation / servicing(b)</string>
    <string name="Activity_2_child">(FKDIS)</string>
    <string name="Activity_2_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_2_rd_1">5.Activities observed involved Air Freshener (AF) / Fly Killer Dispenser Unit?</string>
    <string name="Activity_2_rd_2">Is ladder being used?</string>
    <string name="Activity_2_field_1">5.(a).Air-freshener/ Fly Killer Dispenser Units are installed not more than 2 meter above the ground.</string>
    <string name="Activity_2_field_2">5.(b).For installations above 2m, SRA is done with safe work method in place? Supervisor, manager or SHE person is consulted?</string>
    <string name="Activity_2_field_3">5.(c).AF or Fly Killer units are not installed directly above areas with human traffic/ activities, to minimize risks of hit by falling units</string>
    <string name="Activity_2_field_4">4.Ladder is of the right height (top 2 rungs must not be in use) and in good condition?</string>
    <string name="Activity_2_field_5">5.Ladder has Safe Working Load (SWL) label e.g. SWL 150kg?</string>
    <string name="Activity_2_field_6">6.Ladder is stable, on even ground and can be fully spread out (for A-ladder)?</string>
    <string name="Activity_2_field_7">7. User has 3 points of contact with the ladder and has the front of his body facing the ladder?</string>
    <string name="Activity_2_submit">Submit</string>
    <string name="Activity_3_head">Bait Stations Installation / Servicing</string>
    <string name="Activity_3_child">(WAH)</string>
    <string name="Activity_3_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_3_rd_1">6.Activities observed involved Bait Stations and Fly Traps installation/ servicing?</string>
    <string name="Activity_3_field_1">6.(a).Bait Stations/ Fly Traps are not installed at height where the access is unsafe or obstructed (falling from height hazards)</string>
    <string name="Activity_3_field_2">2. Are bait stations, fly traps installed at safe to access locations, that avoid/ minimize slip , trip and fall risks?</string>
    <string name="Activity_3_field_3">3. Are bait stations, fly traps installed at safe locations away from moving vehicles, moving machinery and electrical hazards?</string>
    <string name="Activity_3_submit">Submit</string>
    <string name="Activity_4_head">Fly Traps Installation / Servicing</string>
    <string name="Activity_4_child">(FTIS)</string>
    <string name="Activity_4_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_4_rd_1">Activities observed involved Bait Stations and Fly Traps installation/ servicing?</string>
    <string name="Activity_4_field_1">1. Bait Stations/ Fly Traps are not installed at height where the access is unsafe or obstructed (falling from height hazards)</string>
    <string name="Activity_4_field_2">2. Are bait stations, fly traps installed at safe to access locations, that avoid/ minimize slip , trip and fall risks?</string>
    <string name="Activity_4_field_3">3. Are bait stations, fly traps installed at safe locations away from moving vehicles, moving machinery and electrical hazards?</string>
    <string name="Activity_4_submit">Submit</string>
    <string name="Activity_5_head">Bird Proofing Via Abseiling</string>
    <string name="Activity_5_child">(BPVA)</string>
    <string name="Activity_5_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_5_rd_1">7.Activities observed involved Bird Proofing?</string>
    <string name="Activity_5_field_1">7.(a).Is Personal Fall Arrest System (PFAS including harness, lifeline, connectors) inspected before use?</string>
    <string name="Activity_5_field_2">7.(b).Is Rescue kit (for abseiling/ rope access) available as technician carried out bird proofing?</string>
    <string name="Activity_5_field_3">7.(c).Is a Rescuer wearing full body harness on standby during bird proofing work?</string>
    <string name="Activity_5_submit">Submit</string>
    <string name="Activity_6_head">Driving Service Vehicle</string>
    <string name="Activity_6_child">(DSV)</string>
    <string name="Activity_6_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_6_rd_1">Staff drives a vehicle or rides a motorbike for work?</string>
    <string name="Activity_6_field_1">1. Staff has a valid driving license? Request to see license for verification</string>
    <string name="Activity_6_field_2">2. Staff (driving the vehicle) is the authorized driver appointed by RI to drive this vehicle?</string>
    <string name="Activity_6_field_3">3. Staff has the Company Vehicle Handbook and been briefed by his supervisor/ manager/ SHE personnel?</string>
    <string name="Activity_6_field_4">4. Is service vehicle in good condition? Take picture of vehicle and the license plate.</string>
    <string name="Activity_6_field_5">5.Seat belts easily accessible and in good condition? Take a picture</string>
    <string name="Activity_6_field_6">6.Service vehicle (4-wheeler) equipped with emergency equipment and these are in good conditions?</string>
    <string name="Activity_6_submit">Submit</string>
    <string name="Activity_7_head">Riding Motorbike For Work</string>
    <string name="Activity_7_child">(RMW)</string>
    <string name="Activity_7_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_7_rd_1">Staff drives a vehicle or rides a motorbike for work? </string>
    <string name="Activity_7_field_1">1. Staff has a valid driving license? Request to see license for verification</string>
    <string name="Activity_7_field_2">2. Staff (driving the vehicle) is the authorized driver appointed by RI to drive this vehicle?</string>
    <string name="Activity_7_field_3">3. Staff has the Company Vehicle Handbook and been briefed by his supervisor/ manager/ SHE personnel?</string>
    <string name="Activity_7_field_4">4. Is service vehicle in good condition? Take picture of vehicle and the license plate.</string>
    <string name="Activity_7_field_5">5.Seat belts easily accessible and in good condition? Take a picture</string>
    <string name="Activity_7_submit">Submit</string>
    <string name="Activity_8_head">Work At The Ceiling/ Roof Void</string>
    <string name="Activity_8_child">(WCRV)</string>
    <string name="Activity_8_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_8_rd_1">Is ladder being used?</string>
    <string name="Activity_8_field_1">1.Ladder is of the right height (top 2 rungs must not be in use) and in good condition?</string>
    <string name="Activity_8_field_2">2.Ladder has Safe Working Load (SWL) label e.g. SWL 150kg?</string>
    <string name="Activity_8_field_3">3.Ladder is stable, on even ground and can be fully spread out (for A-ladder)?</string>
    <string name="Activity_8_field_4">4. User has 3 points of contact with the ladder and has the front of his body facing the ladder?</string>
    <string name="Activity_8_field_5">5. If there is work at the ceiling/ roof void, has technician check if there are electrical fittings/ cables at the ceiling space/ roof void?</string>
    <string name="Activity_8_field_6">6. If there are electrical cables/ fittings at the ceiling/ roof void, has staff discuss with customer to turn off the power to these electricals before start work?</string>
    <string name="Activity_8_field_7">7. If not practicable to shut down power to the electricals at the ceiling/ roof void, other safe alternatives have been adopted?</string>
    <string name="Activity_8_field_8">8. Electrical insulation gloves used by staff are in good condition?</string>
    <string name="Activity_8_submit">Submit</string>
    <string name="Activity_9_head">Entry into Roof Void</string>
    <string name="Activity_9_child">(ERV)</string>
    <string name="Activity_9_msot">Management Safety Observation Tour (MSOT)</string>
    <string name="Activity_9_rd_1">Is ladder being used?</string>
    <string name="Activity_9_field_1">1.Ladder is of the right height (top 2 rungs must not be in use) and in good condition?</string>
    <string name="Activity_9_field_2">2.Ladder has Safe Working Load (SWL) label e.g. SWL 150kg?</string>
    <string name="Activity_9_field_3">3.Ladder is stable, on even ground and can be fully spread out (for A-ladder)?</string>
    <string name="Activity_9_field_4">4. User has 3 points of contact with the ladder and has the front of his body facing the ladder?</string>
    <string name="Activity_9_field_5">5. If there is work at the ceiling/ roof void, has technician check if there are electrical fittings/ cables at the ceiling space/ roof void?</string>
    <string name="clear">CLEAR</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="page_a_1">1. Staff knows what to report and who to report to?</string>
    <string name="app_names">rAuditor</string>
    <string name="app_source">Management Safety Observation Tour (MSOT)</string>
    <string name="page_next">Next</string>
    <string name="page_a_2">2. Witness encounter any near miss,injury or illness in the last 1 year?</string>
    <string name="page_a_head">INCIDENT REPORTING</string>
    <string name="page_a_sub">SECTION - A</string>
</resources>