<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">

    <RelativeLayout
    android:id="@+id/mysignature"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
        android:background="@drawable/style">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C0C0C0"
                android:layout_weight="1"
                android:id="@+id/sign_name"
                android:hint="Name"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#C0C0C0"

                />
        </LinearLayout>

        <TextView
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:id="@+id/sign_date"
            android:gravity="right"
            android:textColor="#C0C0C0"
            android:hint="Date" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="3dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="#57036F"
            android:text="@string/clear" />
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:background="#57036F"
            android:text="@string/save" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="2dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:background="#57036F"
            android:text="@string/cancel"/>
    </LinearLayout>


</LinearLayout>