<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:windowSoftInputMode="stateHidden"
    android:layout_height="match_parent"
    android:background="@drawable/bgmain">


    <com.rentokil.pci.rauditor.MSOT.SliderLayout
        android:id="@+id/slider"
        style="@style/AlertDialog.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="#fff"
        custom:pager_animation_span="1100">


        <requestFocus />
    </com.rentokil.pci.rauditor.MSOT.SliderLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/uperslider">






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <customfonts.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/page_a_head"
                android:textColor="#fff"
                android:textSize="21dp" />

            <customfonts.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/page_a_sub"
                android:textColor="#ccffffff"
                android:textSize="@dimen/text" />


        </LinearLayout>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#00000000"
                android:gravity="center"
                android:text="@string/app_names"
                android:textColor="#FFFF"
                android:textSize="@dimen/text" />

            <!--<ImageView-->

                <!--android:layout_width="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:src="@drawable/instruct"-->
                <!--android:layout_marginLeft="310dp"-->
                <!--android:layout_marginRight="30dp"-->
                <!--android:id="@+id/ins_img"/>-->

            <ImageView

                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:src="@drawable/draft_color_icon"
                android:layout_marginLeft="300dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-20dp"
                android:id="@+id/draft"/>



            <!--********SLIDER**********-->


            <LinearLayout
                android:id="@+id/haircut"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="261dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg_list_rect"
                android:elevation="4dp"
                android:orientation="vertical">

                <!--*****HAIR CUT********-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedrect"
                    android:orientation="horizontal"
                    android:padding="16dp"

                    >

                    <customfonts.MyTextViewMSOT
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_source"
                        android:textColor="@color/textsub"
                        android:textSize="@dimen/text" />


                    <customfonts.MyTextViewMSOT

                        android:id="@+id/sub_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/rect"
                        android:gravity="center"
                        android:paddingLeft="19dp"
                        android:paddingTop="6dp"
                        android:paddingRight="19dp"
                        android:paddingBottom="6dp"
                        android:text="@string/page_next"
                        android:textColor="#fff"
                        android:textSize="@dimen/text" />

                    <customfonts.MyTextViewMSOT

                        android:id="@+id/sub_nxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="-70dp"
                        android:background="@drawable/reactnxt"
                        android:gravity="center"
                        android:paddingLeft="19dp"
                        android:paddingTop="6dp"
                        android:paddingRight="19dp"
                        android:paddingBottom="6dp"
                        android:text="@string/page_next"
                        android:textColor="#fff"
                        android:textSize="@dimen/text" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <customfonts.MyTextViewMSOT
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/page_a_1"
                            android:textColor="@color/text"
                            android:textSize="@dimen/text" />

                        <RadioGroup
                            android:id="@+id/e1_rd1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:checked="false"
                            android:gravity="center"
                            android:orientation="vertical">


                            <RadioButton

                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-110dp"

                                android:checked="false"
                                android:gravity="center_vertical"
                                android:text="@string/Activity_rd_yes"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />


                            <RadioButton

                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-36dp"
                                android:layout_marginTop="-32dp"
                                android:text="@string/Activity_rd_par"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />

                            <RadioButton

                                android:layout_width="60dp"

                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:layout_marginTop="-32dp"
                                android:text="@string/Activity_rd_no"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />

                            <RadioButton

                                android:layout_width="60dp"

                                android:layout_height="wrap_content"
                                android:layout_marginLeft="100dp"
                                android:layout_marginTop="-32dp"
                                android:text="@string/Activity_rd_na"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />


                        </RadioGroup>


                        <TextView
                            android:id="@+id/e1_addcmt1"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/plusymbol" />


                        <TextView
                            android:id="@+id/img_toast1"
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:layout_marginLeft="80dp"
                            android:layout_marginTop="-25dp"
                            android:background="@drawable/infonewicon" />


                        <TextView
                            android:id="@+id/image_Q1"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="147dp"
                            android:layout_marginTop="-24dp"
                            android:background="@drawable/cameraicon1" />


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/Image_layout_Q1"
                            android:layout_width="45dp"
                            android:layout_height="45dp"

                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="28dp"
                            android:layout_marginTop="-35dp"
                            app:civ_border_color="#FFFFFF"
                            app:civ_border_width="5dp" />

                        <TextView
                            android:id="@+id/e1_cmt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/text_cmt"
                            android:textSize="@dimen/text"
                            android:textStyle="italic" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <customfonts.MyTextViewMSOT
                            android:id="@+id/title1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/page_a_2"
                            android:textColor="@color/text"
                            android:textSize="@dimen/text" />

                        <RadioGroup
                            android:id="@+id/e2_rd1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:checked="false"
                            android:gravity="center"
                            android:orientation="vertical">


                            <RadioButton

                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-110dp"

                                android:checked="false"
                                android:gravity="center_vertical"
                                android:text="@string/Activity_rd_yes"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />


                            <RadioButton

                                android:layout_width="90dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-36dp"
                                android:layout_marginTop="-32dp"
                                android:text="@string/Activity_rd_par"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />

                            <RadioButton

                                android:layout_width="60dp"

                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:layout_marginTop="-32dp"
                                android:text="@string/Activity_rd_no"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />

                            <RadioButton

                                android:layout_width="60dp"

                                android:layout_height="wrap_content"
                                android:layout_marginLeft="100dp"
                                android:layout_marginTop="-32dp"
                                android:text="@string/Activity_rd_na"
                                android:textColor="@color/text_color"
                                android:theme="@style/SampleTheme_green" />


                        </RadioGroup>

                        <TextView
                            android:id="@+id/e2_addcmt"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/plusymbol" />


                        <TextView
                            android:id="@+id/image_Q2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginLeft="83dp"
                            android:layout_marginTop="-27dp"
                            android:background="@drawable/cameraicon1" />


                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/Image_layout_Q2"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="-35dp"
                            android:layout_marginTop="-35dp"
                            app:civ_border_color="#FFFFFF"
                            app:civ_border_width="5dp" />

                        <TextView
                            android:id="@+id/e2_cmt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/text_cmt"
                            android:textSize="@dimen/text"

                            />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical"
                    android:padding="16dp"

                    >

                    <customfonts.MyTextViewMSOT

                        android:id="@+id/sub_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="@drawable/rect"
                        android:paddingLeft="19dp"
                        android:paddingTop="6dp"
                        android:paddingRight="19dp"
                        android:paddingBottom="6dp"
                        android:text="@string/page_next"
                        android:textColor="#fff"
                        android:textSize="@dimen/text"


                        />
                </LinearLayout>

                <com.rentokil.pci.rauditor.MSOT.ExpandableHeightListView
                    android:id="@+id/haircut_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >


                </com.rentokil.pci.rauditor.MSOT.ExpandableHeightListView>


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
